tests/ui/suggestions/suggest-adding-reference-to-trait-assoc-item.stderr
error[E0277]: the trait bound `&mut usize: Default` is not satisfied
  --> $DIR/suggest-adding-reference-to-trait-assoc-item.rs:13:9
   |
LL |     foo(Default::default());
   |         -^^^^^^^^^^^^^^^^^
   |         |
   |         the trait `Default` is not implemented for `&mut usize`
   |         help: consider mutably borrowing here: `&mut`

error[E0277]: the trait bound `&usize: Default` is not satisfied
  --> $DIR/suggest-adding-reference-to-trait-assoc-item.rs:14:9
   |
LL |     bar(Default::default());
   |         -^^^^^^^^^^^^^^^^^
   |         |
   |         the trait `Default` is not implemented for `&usize`
   |         help: consider borrowing here: `&`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
